Fix spacing of course-header on smaller screens since main header is fixed now

--- a/wp-content/themes/meltingpot-child/style.css
+++ b/wp-content/themes/meltingpot-child/style.css
@@ -42,8 +42,8 @@ h6 {}
 		position: fixed;
 		z-index: 13;
 	}
-	header.header {
-		margin-bottom: 60px;
+	.memberDashWelc {
+		margin-top: 60px;
 	}
 }
 @media screen and (max-width: 330px) {
